# ChangeLog for net-misc/netkit-telnetd
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-telnetd/ChangeLog,v 1.38 2005/04/03 11:24:19 hardave Exp $

  03 Apr 2005; Hardave Riar <hardave@gentoo.org>
  netkit-telnetd-0.17-r6.ebuild:
  Stable on mips, bug #87211.

  31 Mar 2005; Aron Griffis <agriffis@gentoo.org>
  netkit-telnetd-0.17-r6.ebuild:
  stable on ia64

  31 Mar 2005; Guy Martin <gmsoft@gentoo.org> netkit-telnetd-0.17-r6.ebuild:
  Stable on hppa.

  30 Mar 2005; Bryan Østergaard <kloeri@gentoo.org>
  netkit-telnetd-0.17-r6.ebuild:
  Stable on alpha, bug 87211.

  30 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  netkit-telnetd-0.17-r6.ebuild:
  Stable on sparc wrt #87211

  30 Mar 2005; Danny van Dyk <kugelfang@gentoo.org>
  netkit-telnetd-0.17-r6.ebuild:
  Marked stable on amd64 wrt Security BUG #87211.

  30 Mar 2005; Markus Rothe <corsair@gentoo.org>
  netkit-telnetd-0.17-r6.ebuild:
  Stable on ppc64; bug #87211

  30 Mar 2005; Olivier Crête <tester@gentoo.org>
  netkit-telnetd-0.17-r6.ebuild:
  Stable on x86 per security bug #87211

*netkit-telnetd-0.17-r6 (29 Mar 2005)

  29 Mar 2005; <solar@gentoo.org> +netkit-telnetd-0.17-r6.ebuild:
  - debian changes from 0.17-28: telnet/telnet.cc: Fixed buffer overflow in the
  handling of the LINEMODE suboptions in telnet clients (CAN-2005-0469). Thanks
  Martin 'Joey' Schulze for the patch.

  14 Mar 2005; <solar@gentoo.org>
  files/netkit-telnetd-0.17-cflags-gnu_source.patch:
  - update gnu-cflags patch from bug 68679

*netkit-telnetd-0.17-r5 (12 Mar 2005)

  12 Mar 2005; <solar@gentoo.org> +netkit-telnetd-0.17-r5.ebuild:
  - bump patch version. fixes debian bug #272312

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  02 Nov 2004; Markus Rothe <corsair@gentoo.org>
  netkit-telnetd-0.17-r4.ebuild:
  Marked ppc64; bug #64632
