@@ -1,0 +1,2 @@
+MD5 d6beabaaf53fe6e382c42ce3faa05a36 netkit-telnet-0.17.tar.gz 133749
+MD5 b740016f04047b95826f4e053c6405ca netkit-telnet_0.17-32.diff.gz 26464
